fix: fixed servicesForm gap

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,7 +1,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   min-height: 100%;
 }
