--- a/src/components/FormButton/FormButton.css
+++ b/src/components/FormButton/FormButton.css
@@ -1,4 +1,5 @@
 .form-button {
+  margin-top: 10px;
   border: none;
   background-color: #000;
   padding: 10px 20px;
